CTT_Package/objects/Underlying_Illness__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact Outreach, Positive Outreach</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Underlying Illnesses</relationshipLabel>
        <relationshipName>Underlying_Illnesses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Gestational age (in weeks):</inlineHelpText>
        <label>Pregnancy Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underlying Illness Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Other, Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify__c</fullName>
        <label>Underlying Illness Specify</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Underlying_Illness</valueSetName>
        </valueSet>
    </fields>
    <label>Underlying Illness</label>
    <nameField>
        <displayFormat>UI-{00000000}</displayFormat>
        <label>UI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underlying Illnesses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Case_Underlying_Illness_Must_be_Yes</fullName>
        <active>false</active>
        <errorConditionFormula>TEXT(Case__r.Underlying_Illness__c) != &apos;YES&apos;</errorConditionFormula>
        <errorMessage>Can&apos;t add Underlying Illness records if parent Case.Underlying Illness field is not equal to &apos;Yes&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pregnancy_Detail_Only_if_Pregnant</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Underlying_Illness_Specify__c) != &apos;PREGNANT&apos; &amp;&amp;  NOT(ISBLANK(Pregnancy_Detail__c) || Pregnancy_Detail__c == &apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>Pregnancy_Detail__c</errorDisplayField>
        <errorMessage>Underlying Illness Specify must must equal &quot;PREGNANT&quot; for &quot;Pregnancy Detail&quot; to be filled in</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Other_Only_if_Other</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Underlying_Illness_Specify__c) != &apos;OTHER&apos; &amp;&amp; NOT(ISBLANK(Underlying_Illness_Specify_Other__c))</errorConditionFormula>
        <errorDisplayField>Underlying_Illness_Specify_Other__c</errorDisplayField>
        <errorMessage>Underlying Illness Specify must must equal &quot;OTHER&quot; for &quot;If Other, Please Specify&quot; to be filled in</errorMessage>
    </validationRules>
</CustomObject>